--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,10 +5,10 @@ repo: upptime # The name of this repository
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
+  - name: Plex
+    url: https://maynardserver.duckdns.org:32400
+  - name: Home Assistant
+    url: http://maynardserver.duckdns.org:8123
   - name: Test Broken Site
     url: https://thissitedoesnotexist.koj.co
   - name: Overseer
