--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -27,7 +27,7 @@ status-website:
     - title: Status
       href: /marksmaynard1/MaynardHome
     - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+      href: https://github.com/marksmaynard1/MaynardHome
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
