--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,8 +5,8 @@ repo: upptime # The name of this repository
 sites:
   - name: Google
     url: https://www.google.com
-  - name: Mealie
-    url: http://maynardserver.duckdns.org:9925
+  - name: Plex
+    url: http://maynardserver.duckdns.org:32400
   - name: Home Assistant
     url: http://maynardserver.duckdns.org:8123
   - name: Test Broken Site
@@ -17,17 +17,17 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  #cname: demo.upptime.js.org
-   baseUrl: 
+  cname: demo.upptime.js.org
+  # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
-      href: /MaynardHome
+      href: /
     - title: GitHub
-      href: https://github.com/marksmaynard1/MaynardHome
+      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
